<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SWM 2.1 1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="author_name">Mirosław Gałczyński</string>
    <string name="application_info">Program na SWM laboratorium 3, program nr 1</string>

    <string-array name="enumeration">
        <item>Pierwszy</item>
        <item>Drugi</item>
<!--         <item>Trzeci</item> -->
<!--         <item>Czwarty</item> -->
    </string-array>

    <string name="title_activity_relative">Relative Activity</string>
    <string name="toggle">Włącznik</string>
    <string name="checkbox">Checkbox</string>
    <string name="exit">Wyjdź</string>
    <string name="switch_widget">Przeł.</string>
    <string name="on">Wł.</string>
    <string name="off">Wył.</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_activity_linear2">Aktywność liniowa 2</string>
    <string name="incentive_txtfld">Wpisz coś</string>
    <string name="editText">Wprowadzanie tekstu</string>

</resources>